ext4-migration: Mount with the correct authorization info when starting migration.

The info was lost during a refactoring: 7803fe02870ac7833a30d3c71b15fe0aea159db

BUG=807856
TEST=manually try the migration

Change-Id: I5e986b53f099ce3c7c28bbb66fabf6eb7263521d
Reviewed-on: https://chromium-review.googlesource.com/897066
Reviewed-by: Satoru Takabayashi <satorux@chromium.org>
Reviewed-by: Ryo Hashimoto <hashimoto@chromium.org>
Commit-Queue: Kazuhiro Inaba <kinaba@chromium.org>
Cr-Commit-Position: refs/heads/master@{#533580}
Former-commit-id: 41978a3923e22c69057a0910200b691d77c085a3